--- a/style.css
+++ b/style.css
@@ -84,6 +84,23 @@ a {
     border: 2px outset #5656DA;
 }
 
+#front{
+    background: url(./Icons/MeowniumBuilding.png);
+    background-position: center;
+    background-size: cover;
+    margin: 0px;
+    padding: 10px;
+}
+
+#front div{
+    background-color: #00000055;
+    border: outset 2px #00000060;
+    padding: 5px;
+    margin: 4%;
+    width: 90%;
+    text-align: center;
+}
+
 #showingProjects {
     background-color: #00000055;
     border-top: solid black 1px;
