--- a/style.css
+++ b/style.css
@@ -127,12 +127,13 @@ a {
 
 .CatProjects {
     width: min-content;
-    height: min-content;
+    height: 250px;
     display: inline-block;
     margin: 8px;
     border: solid rgba(0, 128, 0, 0.6) 2px;
     background-color: rgba(47, 79, 79, 0.6);
     padding: 5px;
+    transition: 0.5s;
 }
 
 .CatProjects:hover {
